Changing the way that the image was pulling HHVM. The compilation was wasting so many time that Docker Hub autobuild has timed out.

--- a/hhvm/Dockerfile
+++ b/hhvm/Dockerfile
@@ -3,23 +3,11 @@ MAINTAINER brunoric <brunoric@gmail.com>
 
 # Installing packages
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get -y install autoconf automake binutils-dev build-essential cmake g++ git \
-	libboost-dev libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev \
-	libboost-system-dev libboost-thread-dev libbz2-dev libc-client-dev libldap2-dev \
-	libc-client2007e-dev libcap-dev libcurl4-openssl-dev libdwarf-dev libelf-dev \
-	libexpat-dev libgd2-xpm-dev libgoogle-glog-dev libgoogle-perftools-dev libicu-dev \
-	libjemalloc-dev libmcrypt-dev libmemcached-dev libmysqlclient-dev libncurses-dev \
-	libonig-dev libpcre3-dev libreadline-dev libtbb-dev libtool libxml2-dev zlib1g-dev \
-	libevent-dev libmagickwand-dev libinotifytools0-dev libiconv-hook-dev libedit-dev \
-	libiberty-dev libxslt1-dev ocaml-native-compilers libsqlite3-dev libyaml-dev libgmp3-dev
+RUN apt-get -y install wget
+RUN wget -O - http://dl.hhvm.com/conf/hhvm.gpg.key | sudo apt-key add -
+RUN echo deb http://dl.hhvm.com/ubuntu trusty main | sudo tee /etc/apt/sources.list.d/hhvm.list
+RUN sudo apt-get update && apt-get -y install libgmp-dev libmemcached-dev hhvm
 RUN apt-get clean && apt-get autoremove -y
 
-# Downloading HHVM from source-code	
-RUN git clone git://github.com/facebook/hhvm.git --depth=1 && cd hhvm && \
-	git submodule update --init --recursive
-
-# Building HHVM
-RUN cd hhvm && cmake . && make && make install
-
 # HHVM interactive shell
-CMD ["/usr/local/bin/hhvm", "-a"]
+CMD ["hhvm", "-a"]
