Changing the location of the :deb image's Dockerfile.

--- a/deb/Dockerfile
+++ b/deb/Dockerfile
@@ -10,9 +10,9 @@ RUN sudo apt-get update && apt-get -y install libgmp-dev libmemcached-dev hhvm
 RUN apt-get clean && apt-get autoremove -y
 
 # Scripts
-ADD supervisord-hhvm.conf /supervisord-hhvm.conf
-ADD supervisord-hhvm.sh /supervisord-hhvme.sh
-ADD start.sh /start.sh
+ADD ../supervisord-hhvm.conf /supervisord-hhvm.conf
+ADD ../supervisord-hhvm.sh /supervisord-hhvme.sh
+ADD ../start.sh /start.sh
 RUN chmod 755 /start.sh
 
 # Exposing HHVM-FastCGI port
