Changing the HHVM_VERSION value on the compiled builds.

--- a/2.4/Dockerfile
+++ b/2.4/Dockerfile
@@ -1,5 +1,5 @@
-FROM hhvm:prebuild
+FROM brunoric/hhvm:prebuild
 MAINTAINER brunoric <brunoric@gmail.com>
 
-ENV HHVM_VERSION 2.4
+ENV HHVM_VERSION HHVM-2.4
 ENV CORE_NUMBER 4
