--- a/3.3/Dockerfile
+++ b/3.3/Dockerfile
@@ -1,5 +1,5 @@
-FROM hhvm:prebuild
+FROM brunoric/hhvm:prebuild
 MAINTAINER brunoric <brunoric@gmail.com>
 
-ENV HHVM_VERSION 3.3
+ENV HHVM_VERSION HHVM-3.3
 ENV CORE_NUMBER 4
