Updating the base image Dockerfile to work properly with the new folder structure.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -18,7 +18,6 @@ RUN apt-get -y install autoconf automake binutils-dev build-essential cmake g++ 
 RUN apt-get clean && apt-get autoremove -y
 
 # Scripts
-ADD supervisord-hhvm.conf /supervisord-hhvm.conf
-ADD supervisord-hhvm.sh /supervisord-hhvm.sh
-ADD start.sh /start.sh
-RUN chmod 755 /start.sh
+ADD supervisor-config/ /etc/supervisor/conf.d/
+ADD scripts/ /scripts/
+RUN chmod 755 /scripts/*.sh
