--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,11 +1,8 @@
 FROM ubuntu:trusty
 MAINTAINER brunoric <brunoric@gmail.com>
 
-ENV HHVM_VERSION HHVM-3.3
-ENV CORE_NUMBER 4
-
 # Installing packages
-RUN apt-get update && apt-get upgrade -y
+RUN apt-get update && apt-get -y upgrade
 RUN apt-get -y install autoconf automake binutils-dev build-essential cmake g++ git \
 	libboost-dev libboost-filesystem-dev libboost-program-options-dev libboost-regex-dev \
 	libboost-system-dev libboost-thread-dev libbz2-dev libc-client-dev libldap2-dev \
@@ -15,7 +12,12 @@ RUN apt-get -y install autoconf automake binutils-dev build-essential cmake g++ 
 	libonig-dev libpcre3-dev libreadline-dev libtbb-dev libtool libxml2-dev zlib1g-dev \
 	libevent-dev libmagickwand-dev libinotifytools0-dev libiconv-hook-dev libedit-dev \
 	libiberty-dev libxslt1-dev ocaml-native-compilers libsqlite3-dev libyaml-dev libgmp3-dev
-RUN apt-get clean && apt-get autoremove -y
+RUN apt-get -y install wget supervisor
+RUN apt-get clean && apt-get -y autoremove
+
+# Downloading HHVM from source-code
+RUN git clone git://github.com/facebook/hhvm.git hhvm-repo && cd hhvm-repo && \
+	git submodule update --init --recursive
 
 # Scripts
 ADD supervisor-config/ /etc/supervisor/conf.d/
