Removing submodule update from base image, it will be present on child images.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -16,8 +16,7 @@ RUN apt-get -y install wget supervisor
 RUN apt-get clean && apt-get -y autoremove
 
 # Downloading HHVM from source-code
-RUN git clone git://github.com/facebook/hhvm.git hhvm-repo && cd hhvm-repo && \
-	git submodule update --init --recursive
+RUN git clone git://github.com/facebook/hhvm.git hhvm-repo
 
 # Scripts
 ADD supervisor-config/ /etc/supervisor/conf.d/
