Updating dev image, removing checkout to master. This HHVM version was failing to compile at this moment.

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -5,9 +5,12 @@ ENV HHVM_VERSION master
 ENV CORE_NUMBER 4
 
 # Building HHVM
-RUN cd hhvm-repo && git checkout ${HHVM_VERSION} && cmake . && make -j ${CORE_NUMBER} && make install
+WORKDIR /hhvm-repo
+RUN git submodule update --init --recursive
+RUN cmake . && make -j ${CORE_NUMBER} && make install
 
 # Removing the pulled repository
+WORKDIR /
 RUN rm -rf hhvm-repo
 
 # Exposing HHVM-FastCGI port
