Updating build commands.

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -8,7 +8,9 @@ ENV CORE_NUMBER 4
 # Building HHVM
 WORKDIR /hhvm-repo
 RUN git submodule update --init --recursive
-RUN cmake . && make -j ${CORE_NUMBER} && make install
+RUN cmake -DMYSQL_UNIX_SOCK_ADDR=/var/run/mysqld/mysqld.sock .
+RUN make -j ${CORE_NUMBER}
+RUN make install
 
 # Removing the pulled repository
 WORKDIR /
