--- a/3.8/Dockerfile
+++ b/3.8/Dockerfile
@@ -9,7 +9,9 @@ ENV CORE_NUMBER 4
 WORKDIR /hhvm-repo
 RUN git checkout tags/${HHVM_VERSION}
 RUN git submodule update --init --recursive
-RUN cmake . && make -j ${CORE_NUMBER} && make install
+RUN cmake -DMYSQL_UNIX_SOCK_ADDR=/var/run/mysqld/mysqld.sock .
+RUN make -j ${CORE_NUMBER}
+RUN make install
 
 # Removing the pulled repository
 WORKDIR /
