--- a/deb/Dockerfile
+++ b/deb/Dockerfile
@@ -4,12 +4,11 @@ MAINTAINER brunoric <brunoric@gmail.com>
 
 # Installing packages
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get install software-properties-common
-RUN apt-get -y install wget supervisor
+RUN apt-get -y install software-properties-common wget supervisor
 RUN apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0x5a16e7281be7a449
 RUN add-apt-repository "deb http://dl.hhvm.com/ubuntu $(lsb_release -sc) main"
 RUN apt-get update
-RUN apt-get install hhvm
+RUN apt-get -y install hhvm
 RUN apt-get clean && apt-get autoremove -y
 
 # Scripts
