Fixing BUG #9 regarding the supervisor not being properly installed.

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -13,8 +13,7 @@ RUN apt-get -y install autoconf automake binutils-dev build-essential cmake g++ 
       libonig-dev libpcre3-dev libreadline-dev libtbb-dev libtool libxml2-dev zlib1g-dev \
       libevent-dev libmagickwand-dev libinotifytools0-dev libiconv-hook-dev libedit-dev \
       libiberty-dev libxslt1-dev ocaml-native-compilers libsqlite3-dev libyaml-dev libgmp3-dev \
-      gperf libkrb5-dev libnotify-dev
-RUN apt-get -y install wget supervisor
+      gperf libkrb5-dev libnotify-dev wget supervisor
 
 # Downloading HHVM from source-code
 RUN git clone git://github.com/facebook/hhvm.git hhvm-repo
