Implementing enhancement #10 regarding hhvm-nightly version and enhancement #11 about to use build args on Dockerfiles.

--- a/deb/Dockerfile
+++ b/deb/Dockerfile
@@ -2,13 +2,15 @@
 FROM ubuntu:trusty
 MAINTAINER brunoric <brunoric@gmail.com>
 
+ARG HHVM_VERSION=hhvm
+
 # Installing packages
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get -y install software-properties-common wget supervisor
 RUN apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0x5a16e7281be7a449
 RUN add-apt-repository "deb http://dl.hhvm.com/ubuntu $(lsb_release -sc) main"
 RUN apt-get update
-RUN apt-get -y install hhvm
+RUN apt-get -y install ${HHVM_VERSION}
 RUN apt-get clean && apt-get autoremove -y
 
 # Scripts
